--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "create-next-app": "^15.2.4"
+    "create-next-app": "^15.2.4",
+    "express": "^4.21.2",
+    "mongodb": "^6.15.0"
   }
 }
