--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,14 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "create-next-app": "^15.2.4",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1"
