--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 PORT=4000
+MONG_URI=mongodb+srv://volunteervolume:arymochi@volunteervolume.6fkj4yf.mongodb.net/?retryWrites=true&w=majority&appName=VolunteerVolume
