--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "create-next-app": "^15.2.4",
     "dotenv": "^16.5.0",
