--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "lucide-react": "^0.503.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
@@ -10,5 +11,4 @@
     "dev:client": "npm start --prefix client",
     "dev": "run-p dev:server dev:client"
   }
-  
 }
