--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "express": "^5.1.0",
-    "lucide-react": "^0.503.0"
+    "lucide-react": "^0.503.0",
+    "nodemailer": "^6.10.1"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
