--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
   "dependencies": {
-<<<<<<< HEAD
     "express": "^5.1.0",
-    "lucide-react": "^0.503.0",
-    "nodemailer": "^6.10.1"
-=======
-    "express": "^5.1.0"
->>>>>>> parent of c3b1a79 (Admin dashboard)
+    "lucide-react": "^0.503.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
@@ -16,5 +11,4 @@
     "dev:client": "npm start --prefix client",
     "dev": "run-p dev:server dev:client"
   }
-  
 }
