--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "dependencies": {
+    "@fontsource/inter": "^5.2.5",
     "express": "^5.1.0",
     "lucide-react": "^0.503.0",
     "nodemailer": "^6.10.1"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "@tailwindcss/forms": "^0.5.10",
+    "autoprefixer": "^10.4.21",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4"
   },
   "scripts": {
     "dev:server": "npm run dev --prefix server",
